Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65600

qwaylandshmbackingstore.cpp:290:5: error: ‘qssize_t’ was not declared in this scope

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.11.0 Alpha
    • 5.11.0 Alpha
    • QPA: Wayland
    • None
    • 15f3316709f055f2f723a839d7108ecd15ad3970

      https://codereview.qt-project.org/#/c/215469/ Update submodules on 'dev' in qt5

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1515275645

      https://testresults.qt.io/coin/api/results/qt/qtwayland/5b01d39d85b8979ddbbe39220492dfdec1b9f506/LinuxUbuntu_16_04x86_64LinuxUbuntu_16_04x86_64GCCqtci-linux-Ubuntu-16.04-x86_64-1-c4b792DeveloperBuild_OutOfSourceBuild_QtLibInfix_QtNamespace_BuildExamples_Documentation/7cb4af92455e6e5704a7f36118d36b657c376cfc/build_1515276017/log.txt.gz

      qwaylandshmbackingstore.cpp: In member function ‘void QtWaylandClient::QWaylandShmBackingStore::resize(const QSize&)’:
      qwaylandshmbackingstore.cpp:290:5: error: ‘qssize_t’ was not declared in this scope
           qssize_t oldSize = mBackBuffer ? mBackBuffer->image()->sizeInBytes() : 0;
           ^~~~~~~~
      qwaylandshmbackingstore.cpp:292:34: error: ‘oldSize’ was not declared in this scope
           if (mBackBuffer != buffer && oldSize == buffer->image()->sizeInBytes()) {
                                        ^~~~~~~
      Makefile:3180: recipe for target '.obj/qwaylandshmbackingstore.o' failed
      make[2]: *** [.obj/qwaylandshmbackingstore.o] Error 1
      make[2]: *** Waiting for unfinished jobs....
      

        For Gerrit Dashboard: QTBUG-65600
        # Subject Branch Project Status CR V

            liaqi Liang Qi
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes