Adapt to qtbase 5.10 API change: qssize_t -> qsizetype

Task-number: QTBUG-65600
Done-with: Thiago Macieira <thiago.macieira@intel.com>
Change-Id: I34116dad8eecd01090596270965b9a24f6fe8f39
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>